# Directional

./: CMakeLists.txt
include/directional/: BigInteger.h  TriMesh.h  combing.h  curl_matching.h  directional_viewer.h  exact_geometric_definitions.h  generate_mesh.h  integrate.h  readOBJ.h  setup_integration.h  writeOBJ.h
